tests/errors/sem.type-mismatch.fficall-arg.or
main :: () -> void {
    lib :: (@load "dynlib.or").lib_t.{
        "decl",
        "asdasda.a",
    };

    @fficall lib, void, "something", 5;
    @fficall lib, void, "something", true;
};
